--- a/ITUEtkinlikProject6.0/Views/LayoutPartial/_NavbarPartial.cshtml
+++ b/ITUEtkinlikProject6.0/Views/LayoutPartial/_NavbarPartial.cshtml
@@ -2,8 +2,8 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg stroke">
             <h1>
-                <a class="navbar-brand mr-lg-5" href="index.html">
-                    Traversal
+                <a class="navbar-brand mr-lg-5" href="/Default/Index">
+                    İTÜ ETKİNLİK
                 </a>
             </h1>
             <!-- if logo is image enable this
@@ -21,13 +21,13 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Ana Sayfa <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/Default/Index">Ana Sayfa <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">Yayın Talebi</a>
+                        <a class="nav-link" href="/YayinTalebi/Index">Yayın Talebi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="services.html">Etkinlikler</a>
+                        <a class="nav-link" href="/Etkinlik/Index">Etkinlikler</a>
                     </li>
 
                     <li class="nav-item">
@@ -37,7 +37,7 @@
                 </ul>
             </div>
             <div class="d-lg-block d-none">
-                <a href="contact.html" class="btn btn-style btn-secondary">Etkinlik Oluştur</a>
+                <a href="../Member/YayinTalebi/NewYayinTalebi" class="btn btn-style btn-secondary">Etkinlik Oluştur</a>
             </div>
             <!-- toggle switch for light and dark theme -->
             <div class="mobile-position">
