--- a/ITUEtkinlikProject6.0/Views/MemberLayoutPartial/_ScriptPartial.cshtml
+++ b/ITUEtkinlikProject6.0/Views/MemberLayoutPartial/_ScriptPartial.cshtml
@@ -2,6 +2,8 @@
 <script src="~/soft-ui-dashboard/assets/js/core/bootstrap.min.js"></script>
 <script src="~/soft-ui-dashboard/assets/js/plugins/perfect-scrollbar.min.js"></script>
 <script src="~/soft-ui-dashboard/assets/js/plugins/smooth-scrollbar.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
 <script>
     var win = navigator.platform.indexOf('Win') > -1;
     if (win && document.querySelector('#sidenav-scrollbar')) {
