UpdateYayinTalebi is added.

--- a/ITUEtkinlikProject6.0/Areas/Member/Views/YayinTalebi/CurrentYayinTalebi.cshtml
+++ b/ITUEtkinlikProject6.0/Areas/Member/Views/YayinTalebi/CurrentYayinTalebi.cshtml
@@ -41,7 +41,7 @@
                     <td>@item.EtkinlikAciklamasi</td>
                     <td>@item.BaslangicTarihi</td>
                     <td>@item.BitisTarihi</td>
-                    <td><a href="/member/yayintalebi/updateyayintalebi" class=" = " btn btn-outline-warning">Güncelle</a></td>
+                    <td><a href="/member/yayintalebi/updateyayintalebi?yayinTalebiId=@item.YayinTalebiId" class=" = " btn btn-outline-warning">Güncelle</a></td>
                         <td><a href="/member/yayintalebi/deleteyayintalebi?yayinTalebiId=@item.YayinTalebiId" class=" = " btn btn-outline-danger">Sil</a></td>
                   
                </tr>
