--- a/ITUEtkinlikProject6.0/Areas/Member/Views/YayinTalebi/NewYayinTalebi.cshtml
+++ b/ITUEtkinlikProject6.0/Areas/Member/Views/YayinTalebi/NewYayinTalebi.cshtml
@@ -2,6 +2,8 @@
 @{
     ViewData["Title"] = "NewYayinTalebi";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
+    var isAddMode = Model.YayinTalebiIsAdd;
+    var action = isAddMode == "Ekle" ? "NewYayinTalebi" : "updateyayintalebi";
 }
 
 @*<script src="~/jquery/jquery.min.js"></script>
@@ -16,11 +18,11 @@
 
 
 <h1>Yayın Talebi</h1>
-<form method="post">
+<form method="post" asp-action="@action">
     <div class="form-group">
         <div>Etkinlik Adı</div>
-        <input type="text" asp-for="YayinTalebi.EtkinlikAdi" class="form-control" />
-        <span asp-validation-for="YayinTalebi.EtkinlikAdi" class="text-danger"></span>
+        <input type="text" asp-for="EtkinlikAdi" class="form-control" />
+        <span asp-validation-for="EtkinlikAdi" class="text-danger"></span>
     </div>
     <div class="form-group">
         <div class="dropdown show">
@@ -37,57 +39,67 @@
     </div>
     <div class="form-group">
         <div>Etkinlik Salonu</div>
-        <select asp-for="YayinTalebi.SalonId" id="Salonlar" class="form-select" aria-label="Default select example">
+        <select asp-for="SalonId" id="Salonlar" class="form-select" aria-label="Default select example">
                 <option selected>Lütfen Önce Kampüs Seçiniz</option>
             </select>
-        <span asp-validation-for="YayinTalebi.SalonId"></span>
+        <span asp-validation-for="SalonId"></span>
     </div>
     <div class="form-group">
         <div class="dropdown show">
             <div>Kategoriler</div>
             <br />
-            <select asp-for="YayinTalebi.KategoriId" class="form-select" aria-label="Default select example">
+            <select asp-for="KategoriId" class="form-select" aria-label="Default select example">
                 <option selected>Kategori Seçiniz</option>
                 @foreach (var kategori in Model.Kategoriler)
                 {
                     <option value="@kategori.KategoriId">@kategori.KategoriAdi</option>
                 }
             </select>
-            <span asp-validation-for="YayinTalebi.KategoriId"></span>
+            <span asp-validation-for="KategoriId"></span>
         </div>
     </div>
 
     <div class="form-group">
         <div>Katılımcı Sayısı</div>
-        <input type="text" asp-for="YayinTalebi.KatilimciSayisi" class="form-control" />
-        <span asp-validation-for="YayinTalebi.KatilimciSayisi"></span>
+        <input type="text" asp-for="KatilimciSayisi" class="form-control" />
+        <span asp-validation-for="KatilimciSayisi"></span>
     </div>
 
     <div class="form-group">
         <div>Başlangıç Tarihi</div>
-        <input type="date" asp-for="YayinTalebi.BaslangicTarihi" class="form-control" />
-        <span asp-validation-for="YayinTalebi.BaslangicTarihi"></span>
+        <input type="date" asp-for="BaslangicTarihi" class="form-control" />
+        <span asp-validation-for="BaslangicTarihi"></span>
     </div>
 
     <div class="form-group">
         <div>Bitiş Tarihi</div>
-        <input type="date" asp-for="YayinTalebi.BitisTarihi" class="form-control" />
-        <span asp-validation-for="YayinTalebi.BitisTarihi"></span>
+        <input type="date" value ="BitisTarihi" asp-for="BitisTarihi" class="form-control" />
+        <span asp-validation-for="BitisTarihi"></span>
     </div>
 
     <div class="form-group">
         <div>Kısa Etkinlik Açıklaması</div>
-        <input type="text" asp-for="YayinTalebi.EtkinlikAciklamasiKisa" class="form-control" />
-        <span asp-validation-for="YayinTalebi.EtkinlikAciklamasiKisa"></span>
+        <input type="text" value="@Model.EtkinlikAciklamasiKisa" asp-for="EtkinlikAciklamasiKisa" class="form-control" />
+        <span asp-validation-for="EtkinlikAciklamasiKisa"></span>
     </div>
 
     <div class="form-group">
         <div> Etkinlik Açıklaması </div>
-        <input type="text" asp-for="YayinTalebi.EtkinlikAciklamasi" class="form-control" />
-        <span asp-validation-for="YayinTalebi.EtkinlikAciklamasi"></span>
+        <input type="text" value="@Model.EtkinlikAciklamasi" asp-for="EtkinlikAciklamasi" class="form-control" />
+        <span asp-validation-for="EtkinlikAciklamasi"></span>
     </div>
 
-    <button class="btn btn-outline-success">Etkinlik Oluştur</button>
+    @{
+        switch (isAddMode)
+        {
+            case "Düzenle":
+                <button class="btn btn-outline-success">Etkinliği Düzenle</button>
+                break;
+            default:
+                <button class="btn btn-outline-success">Etkinlik Oluştur</button>
+                break;
+        }   
+    }
 </form>
 
 <script src="~/js/yayintalebi.js"></script>
