YayinTalebiDetails is added.

--- a/ITUEtkinlikProject6.0/Areas/Member/Views/YayinTalebi/CurrentYayinTalebi.cshtml
+++ b/ITUEtkinlikProject6.0/Areas/Member/Views/YayinTalebi/CurrentYayinTalebi.cshtml
@@ -43,6 +43,8 @@
                     <td>@item.BitisTarihi</td>
                     <td><a href="/member/yayintalebi/updateyayintalebi?yayinTalebiId=@item.YayinTalebiId" class=" = " btn btn-outline-warning">Güncelle</a></td>
                         <td><a href="/member/yayintalebi/deleteyayintalebi?yayinTalebiId=@item.YayinTalebiId" class=" = " btn btn-outline-danger">Sil</a></td>
+                        <td><a href="/member/yayintalebi/yayintalebidetails/@item.YayinTalebiId">Ayrıntılar</a></td>
+
                   
                </tr>
             }
