Kampus,Kategori CRUD operations are done.

--- a/ITUEtkinlikProject6.0/Areas/Member/Views/YayinTalebi/CurrentYayinTalebi.cshtml
+++ b/ITUEtkinlikProject6.0/Areas/Member/Views/YayinTalebi/CurrentYayinTalebi.cshtml
@@ -18,11 +18,11 @@
                     <th>Yayın Talebi ID</th>
                     <th>Etkinlik Adı</th>
                     <th>Kategori Adı</th>
-                    <th>Salon Adı</th>
-                    <th>Katılımcı Sayısı</th>
+                @*    <th>Salon Adı</th>
+                    <th>Katılımcı Sayısı</th>*@
                     <th>Yayın Talebi Durumu</th>
                     <th>Kısa Etkinlik Açıklaması</th>
-                    <th>Etkinlik Açıklaması</th>
+@*                    <th>Etkinlik Açıklaması</th>*@
                     <th>Etkinlik Başlangıç Tarihi</th>
                     <th>Etkinlik Bitiş Tarihi</th>
                     <th></th>
@@ -34,11 +34,11 @@
                    <td>@item.YayinTalebiId</td>
                     <td>@item.EtkinlikAdi</td>
                     <td>@item.KategoriAdi</td>
-                    <td>@item.SalonAdi</td>
-                    <td>@item.KatilimciSayisi</td>
+                @*    <td>@item.SalonAdi</td>
+                    <td>@item.KatilimciSayisi</td>*@
                     <td>@item.Durum</td>
                     <td>@item.EtkinlikAciklamasiKisa</td>
-                    <td>@item.EtkinlikAciklamasi</td>
+                   @* <td>@item.EtkinlikAciklamasi</td>*@
                     <td>@item.BaslangicTarihi</td>
                     <td>@item.BitisTarihi</td>
                     <td><a href="/member/yayintalebi/updateyayintalebi?yayinTalebiId=@item.YayinTalebiId" class=" = " btn btn-outline-warning">Güncelle</a></td>
