--- a/ITUEtkinlikProject6.0/Views/MemberLayoutPartial/_NavbarPartial.cshtml
+++ b/ITUEtkinlikProject6.0/Views/MemberLayoutPartial/_NavbarPartial.cshtml
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse  w-auto  max-height-vh-100 h-100" id="sidenav-collapse-main">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link  " href="~/soft-ui-dashboard/pages/dashboard.html">
+                <a class="nav-link  " href="~/Member/Kategori/CurrentKategori">
                     <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                         <svg width="12px" height="12px" viewBox="0 0 45 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>shop </title>
@@ -26,11 +26,11 @@
                             </g>
                         </svg>
                     </div>
-                    <span class="nav-link-text ms-1">Kontrol Paneli</span>
+                    <span class="nav-link-text ms-1">Kategoriler</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link  active" href="~/soft-ui-dashboard/pages/tables.html">
+                <a class="nav-link  active" href="~/Member/Kampus/CurrentKampus">
                     <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                         <svg width="12px" height="12px" viewBox="0 0 42 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>office</title>
@@ -46,11 +46,11 @@
                             </g>
                         </svg>
                     </div>
-                    <span class="nav-link-text ms-1">Etkinlikler</span>
+                    <span class="nav-link-text ms-1">Kampüsler</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link  " href="~/soft-ui-dashboard/pages/billing.html">
+                <a class="nav-link  " href="~/Member/Salon/CurrentSalon">
                     <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
                         <svg width="12px" height="12px" viewBox="0 0 43 36" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <title>credit-card</title>
@@ -66,7 +66,7 @@
                             </g>
                         </svg>
                     </div>
-                    <span class="nav-link-text ms-1">Profilim</span>
+                    <span class="nav-link-text ms-1">Salonlar</span>
                 </a>
             </li>
             <li class="nav-item">
