--- a/ITUEtkinlikProject6.0/Areas/Member/Views/Kampus/NewKampus.cshtml
+++ b/ITUEtkinlikProject6.0/Areas/Member/Views/Kampus/NewKampus.cshtml
@@ -7,10 +7,10 @@
     var action = isAddMode == "Ekle" ? "NewKampus" : "UpdateKampus";
 }
 
-<h1>Kategori</h1>
+<h1>Kampüs</h1>
 <form method="post" asp-route="/member/yayintalebi/@action">
     <div class="form-group">
-        <div>Kategori Adı</div>
+        <div>Kampüs Adı</div>
         <input type="text" asp-for="KampusAdi" class="form-control" />
         <span asp-validation-for="KampusAdi" class="text-danger"></span>
     </div>
