--- a/ITUEtkinlikProject6.0/Areas/Member/Views/YayinTalebi/CurrentYayinTalebi.cshtml
+++ b/ITUEtkinlikProject6.0/Areas/Member/Views/YayinTalebi/CurrentYayinTalebi.cshtml
@@ -20,7 +20,7 @@
                     <th>Kategori Adı</th>
                 @*    <th>Salon Adı</th>
                     <th>Katılımcı Sayısı</th>*@
-                    <th>Yayın Talebi Durumu</th>
+                @*    <th>Yayın Talebi Durumu</th>*@
                     <th>Kısa Etkinlik Açıklaması</th>
 @*                    <th>Etkinlik Açıklaması</th>*@
                     <th>Etkinlik Başlangıç Tarihi</th>
@@ -36,7 +36,7 @@
                     <td>@item.KategoriAdi</td>
                 @*    <td>@item.SalonAdi</td>
                     <td>@item.KatilimciSayisi</td>*@
-                    <td>@item.Durum</td>
+                  @*  <td>@item.Durum</td>*@
                     <td>@item.EtkinlikAciklamasiKisa</td>
                    @* <td>@item.EtkinlikAciklamasi</td>*@
                     <td>@item.BaslangicTarihi</td>
