--- a/ITUEtkinlikProject6.0/Areas/Member/Views/YayinTalebi/CurrentYayinTalebi.cshtml
+++ b/ITUEtkinlikProject6.0/Areas/Member/Views/YayinTalebi/CurrentYayinTalebi.cshtml
@@ -15,7 +15,7 @@
             <!--/row-grids-->
             <table class="table table-bordered">
                 <tr>
-                    <th>Yayın Talebi ID</th>
+             
                     <th>Etkinlik Adı</th>
                     <th>Kategori Adı</th>
                 @*    <th>Salon Adı</th>
@@ -31,7 +31,7 @@
             @foreach (var item in Model)
             {
                <tr>
-                   <td>@item.YayinTalebiId</td>
+            
                     <td>@item.EtkinlikAdi</td>
                     <td>@item.KategoriAdi</td>
                 @*    <td>@item.SalonAdi</td>
@@ -43,7 +43,7 @@
                     <td>@item.BitisTarihi</td>
                     <td><a href="/member/yayintalebi/updateyayintalebi?yayinTalebiId=@item.YayinTalebiId" class=" = " btn btn-outline-warning">Güncelle</a></td>
                         <td><a href="/member/yayintalebi/deleteyayintalebi?yayinTalebiId=@item.YayinTalebiId" class=" = " btn btn-outline-danger">Sil</a></td>
-                        <td><a href="/member/yayintalebi/yayintalebidetails/@item.YayinTalebiId">Ayrıntılar</a></td>
+                        <td><a href="/member/yayintalebi/yayintalebidetails?yayinTalebiId=@item.YayinTalebiId">Ayrıntılar</a></td>
 
                   
                </tr>
