--- a/ITUEtkinlikProject6.0/Views/MemberLayoutPartial/_HeaderPartial.cshtml
+++ b/ITUEtkinlikProject6.0/Views/MemberLayoutPartial/_HeaderPartial.cshtml
@@ -17,4 +17,5 @@
     <link href="~/soft-ui-dashboard/assets/css/nucleo-svg.css" rel="stylesheet" />
     <!-- CSS Files -->
     <link id="pagestyle" href="~/soft-ui-dashboard/assets/css/soft-ui-dashboard.css?v=1.0.3" rel="stylesheet" />
+    @await Component.InvokeAsync("NToastNotify")
 </head>
