--- a/ITUEtkinlikProject6.0/Areas/Member/Views/Kampus/NewKampus.cshtml
+++ b/ITUEtkinlikProject6.0/Areas/Member/Views/Kampus/NewKampus.cshtml
@@ -14,6 +14,11 @@
         <input type="text" asp-for="KampusAdi" class="form-control" />
         <span asp-validation-for="KampusAdi" class="text-danger"></span>
     </div>
+    <div class="form-group">
+        <div>İngilizce Kampüs Adı</div>
+        <input type="text" asp-for="KampusAdiEn" class="form-control" />
+        <span asp-validation-for="KampusAdiEn" class="text-danger"></span>
+    </div>
 
     @{
         switch (isAddMode)
