--- a/ITUEtkinlikProject6.0/Views/YayinTalebi/Partials/_SalonListesiDropDown.cshtml
+++ b/ITUEtkinlikProject6.0/Views/YayinTalebi/Partials/_SalonListesiDropDown.cshtml
@@ -2,4 +2,15 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    Layout = null;
 }
+
+@model YayinTalebiViewModel
+<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+    @foreach (var salon in Model.Salonlar)
+    {
+        <input class="dropdown-item" value="YayinTalebi.SalonId" asp-for="YayinTalebi.SalonId">
+        @salon.SalonAdi
+        <input />
+    }
+</div>
