--- a/ITUEtkinlikProject6.0/Views/Kampus/CurrentKampus.cshtml
+++ b/ITUEtkinlikProject6.0/Views/Kampus/CurrentKampus.cshtml
@@ -9,7 +9,7 @@
     <div class="container py-md-5">
         <div class="title-content text-left mb-lg-5 mb-4">
             <div class="d-lg-block d-none">
-                <a href="/member/Kampus/NewKampus" class="btn btn-style btn-secondary">Yeni Kampüs</a>
+                <a href="/Kampus/NewKampus" class="btn btn-style btn-secondary">Yeni Kampüs</a>
             </div>
             <h6 class="sub-title">Tüm</h6>
             <h3 class="hny-title">Kampüsler</h3>
@@ -19,15 +19,14 @@
             <table class="table table-bordered">
                 <tr>
                     <th>Kampüs Adı</th>
-                    <th>İngilizce Kampüs Adı</th>
+                  
                 </tr>
 
                 @foreach (var item in Model)
                 {
                     <tr>
                         <td>@item.KampusAdi</td>
-                        <td>@item.KampusAdiEn</td>
-
+           
 
                         <td><a href="/Kampus/updateKampus?KampusId=@item.KampusId" class=" = " btn btn-outline-warning">Güncelle</a></td>
 
@@ -40,5 +39,6 @@
         </div>
     </div>
 </section>
+
 
 
