--- a/ITUEtkinlikProject6.0/Views/Kategori/CurrentKategori.cshtml
+++ b/ITUEtkinlikProject6.0/Views/Kategori/CurrentKategori.cshtml
@@ -1,8 +1,44 @@
-﻿
+﻿@inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer localizer
+@model List<KategoriViewModel>
 @{
     ViewData["Title"] = "CurrentKategori";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
 
-<h1>CurrentKategori</h1>
+<h1>Kategoriler</h1>
+<section class="w3l-grids-3 py-5">
+    <div class="container py-md-5">
+        <div class="title-content text-left mb-lg-5 mb-4">
+            <div class="d-lg-block d-none">
+                <a href="/kategori/NewKategori" class="btn btn-style btn-secondary">Yeni Kategori</a>
+            </div>
+            <h6 class="sub-title">@localizer["Tüm"]</h6>
+            <h3 class="hny-title">@localizer["Kategoriler"]</h3>
+        </div>
+        <div class="row bottom-ab-grids">
+            <!--/row-grids-->
+            <table class="table table-bordered">
+                <tr>
+
+                    <th>@localizer["Kategori Adı"]</th>
+                </tr>
+
+                @foreach (var item in Model)
+                {
+                    <tr>
+
+                        <td>@item.KategoriAdi</td>
+
+
+                        <td><a href="/kategori/updatekategori?kategoriId=@item.KategoriId" class=" = " btn btn-outline-warning">Güncelle</a></td>
+
+                        <td><a href="/kategori/deletekategori?kategoriId=@item.KategoriId" class=" = " btn btn-outline-danger">Sil</a></td>
+
+
+                    </tr>
+                }
+            </table>
+        </div>
+    </div>
+</section>
 
