--- a/ITUEtkinlikProject6.0/Views/Kategori/NewKategori.cshtml
+++ b/ITUEtkinlikProject6.0/Views/Kategori/NewKategori.cshtml
@@ -15,6 +15,12 @@
         <span asp-validation-for="KategoriAdi" class="text-danger"></span>
     </div>
 
+    <div class="form-group">
+        <div>Kategori Adı İngilizce</div>
+        <input type="text" asp-for="KategoriAdiEn" class="form-control" />
+        <span asp-validation-for="KategoriAdiEn" class="text-danger"></span>
+    </div>
+
     @{
         switch (isAddMode)
         {
